# libvmod-cachehits

./: CHANGES.rst  README.rst  configure.ac  rename-vmod-script  sw_vrt.sh
.github/workflows/: build-deb.yml  test.yml
debian.vrt/: bf_build_190.sh  bf_build_220.sh  bf_build_71.sh  bf_build_varnish60.sh  bf_build_varnish77.sh  changelog  gen.sh  pkg.sh  test.vtc
debian.vrt/130/: changelog  control
debian.vrt/140/: changelog  control
debian.vrt/190/: changelog  control  copyright
debian.vrt/220/: control
debian.vrt/71/: changelog  control
debian.vrt/trunk/: changelog  control
debian.vrt/varnish60/: control
debian.vrt/varnish77/: control
debian.vrt/varnish80/: control
m4/: ax_pthread.m4
src/: Makefile.am  vmod_cachehits.c  vmod_cachehits.vcc
src/tests/: test01.vtc
